--- a/src/app/Componentes/listado-especialistas/listado-especialistas.component.css
+++ b/src/app/Componentes/listado-especialistas/listado-especialistas.component.css
@@ -1,40 +1,45 @@
-.filter-by-age {
-    color: #6c757d;
+
+
+
   
-    .title {
-      align-self: center;
-    }
-  
-    .age-slider {
-      width: 85%;
-    }
+    .page-content {
+      padding: 20px 60px;
+    background-color: #FFF;
   }
-  
-  .users-list {
-    padding: 40px 60px;
-  
-    .image-col {
-      text-align:center;
-  
-      .image {
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-      }
+    .img-avatar {
+      border-radius: 50%;
+      width: 150px;
+      display: block;
+      margin: 20px auto;
     }
-    .text-col {
-      margin: auto 0px;
+
+    .change-img-button {
+      display: block;
+      margin: 0px auto;
     }
-    .actions-col {
-      text-align: center;
-      margin: auto 0px;
-  
-      .action {
-        line-height: 1;
-      }
-      .icon {
-        font-size: 20px;
-      }
+
+    .edit-form {
+      padding: 20px;
     }
-  }
-  
+
+      .submit-button-container {
+        justify-content: flex-end;
+      }
+        .submit-button{
+          width: 100%;
+        }
+
+        .delete-button{
+          width: 100%;
+        }
+
+
+      .input-style{
+        width: 100%;
+      }
+
+      .mat-error {
+        font-size: 12px;
+      }
+    
+
