--- a/src/app/Componentes/mis-turnos/mis-turnos.component.html
+++ b/src/app/Componentes/mis-turnos/mis-turnos.component.html
@@ -18,24 +18,28 @@
               </nav>
           <h5 class="mb-1"> Codigo de Turno</h5>
           <small>{{item.numTurno}}</small>
-          <h5 class="mb-1"> Codigo de Turno</h5>
-          <small>{{item.numTurno}}</small>
+          <h5 class="mb-1"> Profesional</h5>
+          <small>{{item.profesional}}</small>
           <h5 class="mb-1">ESTADO DEL TURNO </h5>
+          <small>{{item.estado}}</small>
+
           <h5 class="mb-1">Horario </h5>
 
           <small    >{{item.horaTurno}}</small>
-          <small>Especialidad: {{item.especialidad}}</small>
+          <h5 class="mb-1">Especialidad </h5>
+
+          <small>{{item.especialidad}}</small>
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item active" aria-current="page">Información del Profesional</li>
+              <li class="breadcrumb-item active" aria-current="page">Detalle </li>
             </ol>
           </nav>
        
           <h5 class="mb-1"> Dias Turno</h5>
-           <small>{{item.Profesional}}</small> 
+           <small>{{item.diaTurno}}</small> 
           <h5 class="mb-1">Horarios</h5>
 
-          <!-- <small>{{item.payload.doc.data().horario}}</small> -->
+          <small>{{item.horaTurno}}</small>
     
         </div>
         <div class="col col-md-8 text-col">
