--- a/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
+++ b/src/app/Componentes/ver-turnos-paciente/ver-turnos-paciente.component.html
@@ -29,10 +29,10 @@
               <li class="breadcrumb-item active" aria-current="page">Datos del Paciente</li>
             </ol>
           </nav>
-          <h5 class="mb-1"> Nombre y Apellido del Paciente</h5>
-          <small>{{item.numTurno}}</small>
+          <h5 class="mb-1"> Email del Paciente</h5>
+          <small>{{item.emailPaciente}}</small>
           <h5 class="mb-1">Codigo del Paciente </h5>
-          <small>{{item.numTurno}}</small>
+          <small>{{item.cliente}}</small>
 
           <div class="row" *ngIf="mostrarHistoriaClinica" >
           
